--- a/app/src/main/assets/AlizeConfigurationExample.cfg
+++ b/app/src/main/assets/AlizeConfigurationExample.cfg
@@ -11,6 +11,7 @@ segmentalMode               false
 debug                       false
 verboseLevel                1
 
+threshold                   70
 
 ########################################################
 #      Computation
